# metallum_reviews_scan

./: Cargo.toml  README.md
src/: actualizaciones.rs  api.rs  conexion.rs  index.rs  main.rs  modelos.rs
src/html/: index.html
