[package]
name = "metallum_reviews_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
clap = { version = "4.4.12", features = ["derive"] }
rusqlite = "0.30.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rusqlite = "0.5.0"

[features]
windows = ["rusqlite/bundled"]